# Toys

./: .gitignore  Project.ipynb  README.md  stub.ipynb
37PercentageRule/: README.md  plot_dist.R  sims.R
ChargeCountingSystem/: CMakeLists.txt  ChargeFunction.h  DateCount.h  README.md  main.c  requirement.txt  samples.txt
ChatRoom/: README.md  Requirements.md
Clustering_Practice/: README.md  question_a.rb  question_b.rb  question_c.rb  question_d.rb
DBLP-K-core/: fast_prototype.py
DMtoys/: README.md
IsThatNude/: Nude.py  README.md  tests.py
JNI-Demo/: HelloWorld.java  HelloWorldImpl.cpp  makefile
MaximumFlow/: README.md
MessageMapping/: CMakeLists.txt  README.md  main.c
MessageMapping/lib/: CMakeLists.txt  sample_lib_a.c  sample_lib_b.c
MiningDBLP/: ExtractProcess.py  FP_growth.py  Reader.py  dbl_ppreprocessor.rb  fp_tree.rb  preprocess.py
MongoDB-C/: .fuse_hidden000012f900000023  Makefile  MongoConnection.cpp  MongoConnection.h  RunMongo.cpp
MultiplexIO/: CMakeLists.txt  Client  Client.cpp  ServerViaSelect.cpp  ServerViaSelect.h  TestFile.txt  main.cpp
MultiplexIO2/: CMakeLists.txt  Client  Client.cpp  PollClient  RunClient.sh  ServerViaPoll.cpp  ServerViaPoll.h  main.cpp
MultiplexIO3/: CMakeLists.txt  Client.cpp  Makefile  PollClient.cpp  RunClient.sh  ServerViaEpoll.cpp  (+2 more)
TicketSystem/Server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TicketSystem/Server/database/: MongoConnection.cpp  MongoConnection.h
TicketSystem/Server/socket/: ClownThread.cpp  ClownThread.h  Event.cpp  Event.h  TcpServer.cpp  TcpServer.h
(+218 files in other folders)
