SET(SAMPLE_LIB_A_SRC sample_lib_a.c)
SET(SAMPLE_LIB_B_SRC sample_lib_b.c)

ADD_LIBRARY(sample_a SHARED ${SAMPLE_LIB_A_SRC})

SET_TARGET_PROPERTIES(sample_a PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(sample_b SHARED ${SAMPLE_LIB_B_SRC})

SET_TARGET_PROPERTIES(sample_b PROPERTIES CLEAN_DIRECT_OUTPUT 1)
